fix: scale down bottle on mobile

--- a/src/styles/components/ingredients/index.scss
+++ b/src/styles/components/ingredients/index.scss
@@ -29,12 +29,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 50%;
     min-width: 400px;
     height: auto;
 
     @include tablet {
       max-width: 700px;
+    }
+
+    @include laptop {
+      width: 100%;
     }
   }
 
